# weather-cli

./: README.md  pyproject.toml
weather_cli/: cli.py  helpers.py  weather.py
